# mrktpltsbot

./: .gitignore  .goreleaser.yaml  CODEOWNERS  Cargo.toml  Dockerfile  renovate.json
.github/: dependabot.yml
.github/workflows/: check.yaml  publish.yaml  pull-request.yaml  udeps.yaml
src/: cli.rs  client.rs  crawler.rs  db.rs  heartbeat.rs  logging.rs  main.rs  marketplace.rs  marktplaats.rs  prelude.rs  redis.rs  search_bot.rs  telegram.rs  throttler.rs  tracing.rs
src/crawler/: rate_limiter.rs
src/db/: item.rs  key_values.rs  notification.rs  search_query.rs  subscription.rs
src/marketplace/: marktplaats.rs  search.rs  search_bot.rs  vinted.rs
src/marketplace/item/: amount.rs
src/marketplace/marktplaats/: client.rs
src/marketplace/vinted/: client.rs  search.rs
src/marktplaats/: models.rs
src/telegram/: bot.rs  methods.rs  notification.rs  response.rs
