[package]
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
categories = ["command-line-utilities"]
description = "Marktplaats search notifications in Telegram (unofficial)"
edition = "2021"
keywords = ["marktplaats", "bot", "telegram"]
license = "MIT"
name = "mrktpltsbot"
publish = true
readme = "README.md"
repository = "https://github.com/eigenein/mrktpltsbot"
version = "0.4.0"

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.16", features = ["cargo", "derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.30"
reqwest = { version = "0.11.23", default-features = false, features = ["gzip", "json", "rustls"] }
sentry = { version = "0.32.1", default-features = false, features = ["anyhow", "backtrace", "contexts", "panic", "reqwest", "rustls", "tracing"] }
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["macros"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[badges]
is-it-maintained-issue-resolution = { repository = "eigenein/mrktpltsbot" }
is-it-maintained-open-issues = { repository = "eigenein/mrktpltsbot" }

[profile.release]
lto = "fat"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
