[package]
name = "mrktpltsbot"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
categories = ["command-line-utilities"]
description = "Marktplaats search notifications in Telegram (unofficial)"
edition = "2024"
keywords = ["marktplaats", "telegram"]
license = "MIT"
publish = true
readme = "README.md"
repository = "https://github.com/eigenein/mrktpltsbot"
version = "2.1.4"
rust-version = "1.93"

[badges]
is-it-maintained-issue-resolution = { repository = "eigenein/mrktpltsbot" }
is-it-maintained-open-issues = { repository = "eigenein/mrktpltsbot" }

[profile.release]
codegen-units = 1
debug = "full"
lto = "thin"

[lints.rust]
async_fn_in_trait = "allow"

[lints.clippy]

# Categories:
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Individual flags:
future_not_send = "allow"
ignored_unit_patterns = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
significant_drop_tightening = "allow"

[dependencies]
anyhow = { version = "=1.0.102", features = ["backtrace"] }
async-trait = "=0.1.89"
base64-url = "=3.0.2"
bon = { version = "=3.9.0", features = ["implied-bounds"] }
chrono = "=0.4.43"
clap = { version = "=4.5.60", features = ["cargo", "derive", "env", "unicode"] }
deunicode = "=1.6.2"
dotenvy = "=0.15.7"
http = "=1.4.0"
itertools = "=0.14.0"
log = "=0.4.29"
logfire = "=0.9.0"
maud = "=0.27.0"
monostate = "=1.0.2"
reqwest = { version = "=0.13.2", default-features = false, features = ["cookies", "gzip", "http2", "json", "rustls-tls"] }
reqwest-middleware = { version = "=0.5.1", features = ["http2", "json", "rustls-tls"] }
prost = "=0.14.3"
rust_decimal = "=1.40.0"
rust_decimal_macros = "=1.40.0"
seahash = "=4.1.0"
secrecy = { version = "=0.10.3", features = ["serde"] }
sentry = { version = "=0.46.2", default-features = false, features = ["anyhow", "backtrace", "contexts", "panic", "reqwest", "release-health", "rustls"] }
serde = "=1.0.228"
serde_json = "=1.0.149"
serde_qs = "=0.15.0"
sqlx = { version = "=0.8.6", features = ["chrono", "migrate", "runtime-tokio", "sqlite"] }
sqlx-sqlite = "=0.8.6"
thiserror = "=2.0.18"
tokio = { version = "=1.49.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "=0.1.44"
url = "=2.5.8"
